crates/spelldawn/tests/it/rules/snapshots/it__rules__actions__connect.snap
---
source: crates/spelldawn/tests/it/rules/actions.rs
assertion_line: 31
expression: response

---
Ok(
    CommandList {
        commands: [
            GameCommand {
                command: Some(
                    UpdateGameView(
                        UpdateGameViewCommand {
                            game: Some(
                                GameView {
                                    game_id: Some(
                                        GameIdentifier {
                                            value: 1,
                                        },
                                    ),
                                    user: Some(
                                        PlayerView {
                                            player_info: Some(
                                                PlayerInfo {
                                                    name: "Test Overlord Identity",
                                                    portrait: Some(
                                                        SpriteAddress {
                                                            address: "Enixion/Fantasy Art Pack 2/Resized/3",
                                                        },
                                                    ),
                                                    portrait_frame: Some(
                                                        SpriteAddress {
                                                            address: "SpriteWay/Icons/Fantasy Player Frames/50002",
                                                        },
                                                    ),
                                                    card_back: Some(
                                                        SpriteAddress {
                                                            address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Backs/Back_Steampunk_Style_Color_1",
                                                        },
                                                    ),
                                                },
                                            ),
                                            score: Some(
                                                ScoreView {
                                                    score: 0,
                                                },
                                            ),
                                            mana: Some(
                                                ManaView {
                                                    amount: 5,
                                                },
                                            ),
                                            action_tracker: Some(
                                                ActionTrackerView {
                                                    available_action_count: 3,
                                                },
                                            ),
                                        },
                                    ),
                                    opponent: Some(
                                        PlayerView {
                                            player_info: Some(
                                                PlayerInfo {
                                                    name: "Test Champion Identity",
                                                    portrait: Some(
                                                        SpriteAddress {
                                                            address: "Enixion/Fantasy Art Pack 2/Resized/2",
                                                        },
                                                    ),
                                                    portrait_frame: Some(
                                                        SpriteAddress {
                                                            address: "SpriteWay/Icons/Fantasy Player Frames/50003",
                                                        },
                                                    ),
                                                    card_back: Some(
                                                        SpriteAddress {
                                                            address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Backs/Back_Elf_Style_Color_1",
                                                        },
                                                    ),
                                                },
                                            ),
                                            score: Some(
                                                ScoreView {
                                                    score: 0,
                                                },
                                            ),
                                            mana: Some(
                                                ManaView {
                                                    amount: 5,
                                                },
                                            ),
                                            action_tracker: Some(
                                                ActionTrackerView {
                                                    available_action_count: 0,
                                                },
                                            ),
                                        },
                                    ),
                                    arena: Some(
                                        ArenaView {
                                            rooms_at_bottom: Some(
                                                true,
                                            ),
                                            identity_action: LevelUpRoom,
                                        },
                                    ),
                                    current_priority: User,
                                },
                            ),
                        },
                    ),
                ),
            },
            GameCommand {
                command: Some(
                    CreateOrUpdateCard(
                        CreateOrUpdateCardCommand {
                            card: Some(
                                CardView {
                                    card_id: Some(
                                        CardIdentifier {
                                            side: Overlord,
                                            index: 0,
                                        },
                                    ),
                                    card_icons: Some(
                                        CardIcons {
                                            top_left_icon: None,
                                            top_right_icon: None,
                                            bottom_right_icon: None,
                                            bottom_left_icon: None,
                                            arena_icon: None,
                                        },
                                    ),
                                    arena_frame: Some(
                                        SpriteAddress {
                                            address: "SpriteWay/Icons/Fantasy Player Frames/50002",
                                        },
                                    ),
                                    owning_player: User,
                                    revealed_card: Some(
                                        RevealedCardView {
                                            card_frame: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Cards/Card_Steampunk_Style_Color_1",
                                                },
                                            ),
                                            title_background: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Design/Warrior_Card/Warrior_Card Face_Tape",
                                                },
                                            ),
                                            jewel: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Jewels/Jewel_Elf_Color_01",
                                                },
                                            ),
                                            image: Some(
                                                SpriteAddress {
                                                    address: "Enixion/Fantasy Art Pack 2/Resized/3",
                                                },
                                            ),
                                            title: Some(
                                                CardTitle {
                                                    text: "Test Overlord Identity",
                                                },
                                            ),
                                            rules_text: Some(
                                                RulesText {
                                                    text: "",
                                                },
                                            ),
                                            revealed_in_arena: true,
                                            targeting: Some(
                                                CardTargeting {
                                                    targeting: None,
                                                },
                                            ),
                                            on_release_position: Some(
                                                ObjectPosition {
                                                    sorting_key: 4294967295,
                                                    position: Some(
                                                        Staging(
                                                            ObjectPositionStaging,
                                                        ),
                                                    ),
                                                },
                                            ),
                                            can_play: false,
                                            supplemental_info: None,
                                        },
                                    ),
                                },
                            ),
                            create_position: Some(
                                ObjectPosition {
                                    sorting_key: 0,
                                    position: Some(
                                        Identity(
                                            ObjectPositionIdentity {
                                                owner: User,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            create_animation: Unspecified,
                            disable_flip_animation: false,
                        },
                    ),
                ),
            },
            GameCommand {
                command: Some(
                    CreateOrUpdateCard(
                        CreateOrUpdateCardCommand {
                            card: Some(
                                CardView {
                                    card_id: Some(
                                        CardIdentifier {
                                            side: Champion,
                                            index: 0,
                                        },
                                    ),
                                    card_icons: Some(
                                        CardIcons {
                                            top_left_icon: None,
                                            top_right_icon: None,
                                            bottom_right_icon: None,
                                            bottom_left_icon: None,
                                            arena_icon: None,
                                        },
                                    ),
                                    arena_frame: Some(
                                        SpriteAddress {
                                            address: "SpriteWay/Icons/Fantasy Player Frames/50003",
                                        },
                                    ),
                                    owning_player: Opponent,
                                    revealed_card: Some(
                                        RevealedCardView {
                                            card_frame: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Cards/Card_Elf_Style_Color_1",
                                                },
                                            ),
                                            title_background: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Design/Warrior_Card/Warrior_Card Face_Tape",
                                                },
                                            ),
                                            jewel: Some(
                                                SpriteAddress {
                                                    address: "LittleSweetDaemon/TCG_Card_Fantasy_Design/Jewels/Jewel_Elf_Color_01",
                                                },
                                            ),
                                            image: Some(
                                                SpriteAddress {
                                                    address: "Enixion/Fantasy Art Pack 2/Resized/2",
                                                },
                                            ),
                                            title: Some(
                                                CardTitle {
                                                    text: "Test Champion Identity",
                                                },
                                            ),
                                            rules_text: Some(
                                                RulesText {
                                                    text: "",
                                                },
                                            ),
                                            revealed_in_arena: true,
                                            targeting: Some(
                                                CardTargeting {
                                                    targeting: None,
                                                },
                                            ),
                                            on_release_position: Some(
                                                ObjectPosition {
                                                    sorting_key: 4294967295,
                                                    position: Some(
                                                        Staging(
                                                            ObjectPositionStaging,
                                                        ),
                                                    ),
                                                },
                                            ),
                                            can_play: false,
                                            supplemental_info: None,
                                        },
                                    ),
                                },
                            ),
                            create_position: Some(
                                ObjectPosition {
                                    sorting_key: 0,
                                    position: Some(
                                        Identity(
                                            ObjectPositionIdentity {
                                                owner: Opponent,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            create_animation: Unspecified,
                            disable_flip_animation: false,
                        },
                    ),
                ),
            },
        ],
    },
)
